New Crowdin updates (#296)
* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Serbian (Latin))

* New translations cr_strings.xml (Hindi)

* New translations cr_strings.xml (Azerbaijani)

* New translations cr_strings.xml (Tamil)

* New translations cr_strings.xml (Persian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Chinese Simplified)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Turkish)

* New translations cr_strings.xml (Slovak)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Arabic)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Bulgarian)

* New translations cr_strings.xml (Catalan)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Finnish)

* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Kurdish)

* New translations cr_strings.xml (Santali)

* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Serbian (Latin))

* New translations cr_strings.xml (Hindi)

* New translations cr_strings.xm

--- a/res/values-de-rDE/cr_strings.xml
+++ b/res/values-de-rDE/cr_strings.xml
@@ -69,11 +69,6 @@
     <string name="paused_apps_dialog_title">App pausiert</string>
     <string name="paused_apps_dialog_message">%1$s ist mithilfe des Launchers pausiert worden</string>
     <string name="paused_apps_drop_target_label">App pausieren</string>
-    <!-- Icon pack -->
-    <string name="icon_pack_title">Symbolpaket</string>
-    <string name="icon_pack_default_label">Standard</string>
-    <string name="icon_pack_add">Weitere installieren</string>
-    <string name="icon_pack_no_market">Es ist kein App-Store verfügbar</string>
     <!-- Custom seekbar -->
     <string name="custom_seekbar_value">Wert: <xliff:g id="v">%s</xliff:g></string>
     <string name="custom_seekbar_default_value">ist der Standardwert</string>
@@ -231,4 +226,15 @@
     <!-- All apps themed icons -->
     <string name="pref_themed_icons_title">Symboldesigns</string>
     <string name="pref_themed_icons_summary">Stil der Symboldesigns auf dem Startbildschirm folgen</string>
+    <!-- AppInfo -->
+    <string name="app_info_source">Quelle</string>
+    <string name="app_info_source_system">System</string>
+    <string name="app_info_last_update">Zuletzt aktualisiert</string>
+    <string name="app_info_version">Version</string>
+    <string name="app_info_more">Mehr</string>
+    <!-- Icon pack -->
+    <string name="icon_pack_title">Symbolpaket</string>
+    <string name="icon_pack_default_label">Standard</string>
+    <string name="icon_pack_add">Weitere installieren</string>
+    <string name="icon_pack_no_market">Es ist kein App-Store verfügbar</string>
 </resources>
