--- a/res/values-el-rGR/cr_strings.xml
+++ b/res/values-el-rGR/cr_strings.xml
@@ -69,11 +69,6 @@
     <string name="paused_apps_dialog_title">Η εφαρμογή τέθηκε σε παύση</string>
     <string name="paused_apps_dialog_message">%1$s τέθηκε απευθείας σε παύση από τον εκκινητή</string>
     <string name="paused_apps_drop_target_label">Παύση εφαρμογής</string>
-    <!-- Icon pack -->
-    <string name="icon_pack_title">Πακέτο εικονιδίων</string>
-    <string name="icon_pack_default_label">Προεπιλογή</string>
-    <string name="icon_pack_add">Εγκαταστήστε περισσότερα</string>
-    <string name="icon_pack_no_market">Δεν υπάρχει διαθέσιμο κατάστημα εφαρμογών</string>
     <!-- Custom seekbar -->
     <string name="custom_seekbar_value">Τιμή: <xliff:g id="v">%s</xliff:g></string>
     <string name="custom_seekbar_default_value">από προεπιλογή</string>
@@ -231,4 +226,15 @@
     <!-- All apps themed icons -->
     <string name="pref_themed_icons_title">Θεματικά εικονίδια</string>
     <string name="pref_themed_icons_summary">Ακολουθήστε τα θεματικά εικονίδια που χρησιμοποιούνται στην αρχική οθόνη</string>
+    <!-- AppInfo -->
+    <string name="app_info_source">Πηγή</string>
+    <string name="app_info_source_system">Σύστημα</string>
+    <string name="app_info_last_update">Τελευταία ενημέρωση</string>
+    <string name="app_info_version">Έκδοση</string>
+    <string name="app_info_more">Περισσότερα</string>
+    <!-- Icon pack -->
+    <string name="icon_pack_title">Πακέτο εικονιδίων</string>
+    <string name="icon_pack_default_label">Προεπιλογή</string>
+    <string name="icon_pack_add">Εγκαταστήστε περισσότερα</string>
+    <string name="icon_pack_no_market">Δεν υπάρχει διαθέσιμο κατάστημα εφαρμογών</string>
 </resources>
