--- a/res/values-nl-rNL/cr_strings.xml
+++ b/res/values-nl-rNL/cr_strings.xml
@@ -69,11 +69,6 @@
     <string name="paused_apps_dialog_title">App gepauzeerd</string>
     <string name="paused_apps_dialog_message">%1$s is direct onderbroken van de launcher</string>
     <string name="paused_apps_drop_target_label">App pauzeren</string>
-    <!-- Icon pack -->
-    <string name="icon_pack_title">Pictogrammenpakket</string>
-    <string name="icon_pack_default_label">Standaard</string>
-    <string name="icon_pack_add">Meer installeren</string>
-    <string name="icon_pack_no_market">Er is geen beschikbare app store</string>
     <!-- Custom seekbar -->
     <string name="custom_seekbar_value">Waarde: <xliff:g id="v">%s</xliff:g></string>
     <string name="custom_seekbar_default_value">standaard</string>
@@ -231,4 +226,15 @@
     <!-- All apps themed icons -->
     <string name="pref_themed_icons_title">Thema pictogrammen</string>
     <string name="pref_themed_icons_summary">Volg gethematiseerde pictogrammen gebruikt op startscherm</string>
+    <!-- AppInfo -->
+    <string name="app_info_source">Bron</string>
+    <string name="app_info_source_system">Systeem</string>
+    <string name="app_info_last_update">Laatste update</string>
+    <string name="app_info_version">Versie</string>
+    <string name="app_info_more">Meer</string>
+    <!-- Icon pack -->
+    <string name="icon_pack_title">Pictogrammenpakket</string>
+    <string name="icon_pack_default_label">Standaard</string>
+    <string name="icon_pack_add">Meer installeren</string>
+    <string name="icon_pack_no_market">Er is geen beschikbare app store</string>
 </resources>
