--- a/res/values-pl-rPL/cr_strings.xml
+++ b/res/values-pl-rPL/cr_strings.xml
@@ -69,11 +69,6 @@
     <string name="paused_apps_dialog_title">Aplikacja wstrzymana</string>
     <string name="paused_apps_dialog_message">Aplikacja %1$s została wstrzymana z ekranu głównego</string>
     <string name="paused_apps_drop_target_label">Wstrzymaj aplikację</string>
-    <!-- Icon pack -->
-    <string name="icon_pack_title">Pakiet ikon</string>
-    <string name="icon_pack_default_label">Domyślny</string>
-    <string name="icon_pack_add">Zainstaluj więcej</string>
-    <string name="icon_pack_no_market">Brak dostępnego sklepu aplikacji</string>
     <!-- Custom seekbar -->
     <string name="custom_seekbar_value">Wartość: <xliff:g id="v">%s</xliff:g></string>
     <string name="custom_seekbar_default_value">domyślnie</string>
@@ -231,4 +226,15 @@
     <!-- All apps themed icons -->
     <string name="pref_themed_icons_title">Ikony dostosowane do motywu</string>
     <string name="pref_themed_icons_summary">Dopasuj ikony dostosowane do motywu na ekranie głównym</string>
+    <!-- AppInfo -->
+    <string name="app_info_source">Źródło</string>
+    <string name="app_info_source_system">System</string>
+    <string name="app_info_last_update">Ostatnia aktualizacja</string>
+    <string name="app_info_version">Wersja</string>
+    <string name="app_info_more">Więcej</string>
+    <!-- Icon pack -->
+    <string name="icon_pack_title">Pakiet ikon</string>
+    <string name="icon_pack_default_label">Domyślny</string>
+    <string name="icon_pack_add">Zainstaluj więcej</string>
+    <string name="icon_pack_no_market">Brak dostępnego sklepu aplikacji</string>
 </resources>
