--- a/res/values-uk-rUA/cr_strings.xml
+++ b/res/values-uk-rUA/cr_strings.xml
@@ -69,11 +69,6 @@
     <string name="paused_apps_dialog_title">Додаток призупинено</string>
     <string name="paused_apps_dialog_message">%1$s Був зупинений безпосередньо з лаунчера</string>
     <string name="paused_apps_drop_target_label">Призупинити додаток</string>
-    <!-- Icon pack -->
-    <string name="icon_pack_title">Набір іконок</string>
-    <string name="icon_pack_default_label">За замовчанням</string>
-    <string name="icon_pack_add">Встановити ще</string>
-    <string name="icon_pack_no_market">Немає доступного магазину додатків</string>
     <!-- Custom seekbar -->
     <string name="custom_seekbar_value">Значення: <xliff:g id="v">%s</xliff:g></string>
     <string name="custom_seekbar_default_value">За замовчуванням</string>
@@ -231,4 +226,15 @@
     <!-- All apps themed icons -->
     <string name="pref_themed_icons_title">Тематичні піктограми</string>
     <string name="pref_themed_icons_summary">Тематичні піктограми, які використовуються на головному екрані</string>
+    <!-- AppInfo -->
+    <string name="app_info_source">Джерело</string>
+    <string name="app_info_source_system">Система</string>
+    <string name="app_info_last_update">Останнє оновлення</string>
+    <string name="app_info_version">Версія</string>
+    <string name="app_info_more">Більше</string>
+    <!-- Icon pack -->
+    <string name="icon_pack_title">Набір іконок</string>
+    <string name="icon_pack_default_label">За замовчанням</string>
+    <string name="icon_pack_add">Встановити ще</string>
+    <string name="icon_pack_no_market">Немає доступного магазину додатків</string>
 </resources>
