--- a/res/xml/default_workspace_4x5.xml
+++ b/res/xml/default_workspace_4x5.xml
@@ -106,7 +106,7 @@
         launcher:y="-1" >
         <favorite
             launcher:packageName="org.lineageos.aperture"
-            launcher:className="org.lineageos.aperture.CameraLauncher" />
+            launcher:className="com.android.camera.CameraLauncher" />
         <favorite
             launcher:packageName="com.android.camera2"
             launcher:className="com.android.camera.CameraActivity" />
