--- a/res/xml/dw_hotseat_5.xml
+++ b/res/xml/dw_hotseat_5.xml
@@ -64,7 +64,7 @@
         launcher:y="0" >
         <favorite
             launcher:packageName="org.lineageos.aperture"
-            launcher:className="org.lineageos.aperture.CameraLauncher" />
+            launcher:className="com.android.camera.CameraLauncher" />
         <favorite
             launcher:packageName="com.android.camera2"
             launcher:className="com.android.camera.CameraActivity" />
