New Crowdin updates (#305)
* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Arabic)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Bulgarian)

* New translations cr_strings.xml (Catalan)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Finnish)

* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Kurdish)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Slovak)

* New translations cr_strings.xml (Turkish)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Chinese Simplified)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Persian)

* New translations cr_strings.xml (Tamil)

* New translations cr_strings.xml (Azerbaijani)

* New translations cr_strings.xml (Hindi)

* New translations cr_strings.xml (Serbian (Latin))

* New translations cr_strings.xml (Santali)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (

--- a/res/values-hu-rHU/cr_strings.xml
+++ b/res/values-hu-rHU/cr_strings.xml
@@ -236,4 +236,10 @@
     <string name="icon_pack_default_label">Alapértelmezett</string>
     <string name="icon_pack_add">Továbbiak telepítése</string>
     <string name="icon_pack_no_market">Nincs áruház ahonnan letölthetne</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Leállítás</string>
+    <string name="recents_app_killed">Az alkalmazás leállt</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">%2$s memóból %1$s érhető el</string>
+    <string name="recents_meminfo_title">Memória-információ</string>
 </resources>
