--- a/res/values-nl-rNL/cr_strings.xml
+++ b/res/values-nl-rNL/cr_strings.xml
@@ -236,4 +236,10 @@
     <string name="icon_pack_default_label">Standaard</string>
     <string name="icon_pack_add">Meer installeren</string>
     <string name="icon_pack_no_market">Er is geen beschikbare app store</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Sluit af</string>
+    <string name="recents_app_killed">App afgesloten</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s Beschikbaar | %2$s Totaal</string>
+    <string name="recents_meminfo_title">Geheugen informatie</string>
 </resources>
