--- a/res/values-be-rBY/cr_strings.xml
+++ b/res/values-be-rBY/cr_strings.xml
@@ -197,29 +197,29 @@
         <item>Адзін з лепшых выбаршчыкаў</item>
         <item>Разважлівасць для вашай паранойі</item>
         <item>Паспрабуйце ледзяныя дэсерты</item>
-        <item>What a lovely experience, isn\'t it?</item>
-        <item>Evolution is a myth, right?</item>
-        <item>You are what you flash, don\'t be Potato</item>
-        <item>What\'s on your mind?</item>
+        <item>Які цудоўны вопыт, ці не так?</item>
+        <item>Evolution гэта міф, праўда?</item>
+        <item>Вы тое, што прашываеце, не будзьце бульбай</item>
+        <item>Што вы маеце на ўвазе?</item>
         <item>Expecto Patronum</item>
         <item>Wubba Lubba Dub Dub</item>
-        <item>Winner Winner ....?</item>
+        <item>Пераможца Пераможца ....?</item>
         <item>rm -rf \/</item>
     </string-array>
     <!-- Suggestions -->
-    <string name="suggestion_pref_screen_title">Suggestions</string>
-    <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
+    <string name="suggestion_pref_screen_title">Прапановы</string>
+    <string name="suggestion_pref_screen_desc">Для прапаноў ўсіх праграм і галоўнага экрана</string>
     <!-- QuickSpace: QuickEvent: Weather -->
-    <string name="quick_event_ambient_weather_title">Weather condition</string>
-    <string name="quick_event_ambient_weather_summary">Display current weather condition and temperature</string>
-    <string name="quick_event_ambient_weather_enabled_info">Requires weather service to be enabled</string>
+    <string name="quick_event_ambient_weather_title">Умовы надвор\'я</string>
+    <string name="quick_event_ambient_weather_summary">Адлюстраванне бягучых умоў надвор\'я і тэмпературы</string>
+    <string name="quick_event_ambient_weather_enabled_info">Патрабуецца ўключэнне службы надвор\'я</string>
     <!-- Background opacity -->
-    <string name="background_opacity_title">Background opacity</string>
+    <string name="background_opacity_title">Празрыстасць фону</string>
     <!-- Taskbar -->
-    <string name="pref_allow_phone_taskbar_title">Use taskbar</string>
-    <string name="pref_allow_phone_taskbar_summary">For opening and switching apps anywhere</string>
+    <string name="pref_allow_phone_taskbar_title">Выкарыстоўваць панэль задач</string>
+    <string name="pref_allow_phone_taskbar_summary">Для адкрыцця і пераключэння праграм у любым месцы</string>
     <!-- Recents icons -->
-    <string name="recents_screenshot_title">Screenshot</string>
+    <string name="recents_screenshot_title">Здымак экрана</string>
     <string name="recents_clear_all_title">Ачысціць усё</string>
     <string name="recents_lens_title">Аб’ектыў</string>
     <!-- All apps themed icons -->
@@ -236,4 +236,10 @@
     <string name="icon_pack_default_label">Па змаўчанні</string>
     <string name="icon_pack_add">Усталяваць яшчэ</string>
     <string name="icon_pack_no_market">Няма даступнай крамы праграм</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Kill</string>
+    <string name="recents_app_killed">App killed</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s Available | %2$s Total</string>
+    <string name="recents_meminfo_title">Memory info</string>
 </resources>
