--- a/res/values-cs-rCZ/cr_strings.xml
+++ b/res/values-cs-rCZ/cr_strings.xml
@@ -236,4 +236,10 @@
     <string name="icon_pack_default_label">Výchozí</string>
     <string name="icon_pack_add">Instalovat další</string>
     <string name="icon_pack_no_market">Není dostupný žádný obchod s aplikacemi</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Ukončit</string>
+    <string name="recents_app_killed">Aplikace ukončena</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s k dispozici | %2$s celkem</string>
+    <string name="recents_meminfo_title">Informace o\u00a0paměti</string>
 </resources>
