--- a/res/values-de-rDE/cr_strings.xml
+++ b/res/values-de-rDE/cr_strings.xml
@@ -236,4 +236,10 @@
     <string name="icon_pack_default_label">Standard</string>
     <string name="icon_pack_add">Weitere installieren</string>
     <string name="icon_pack_no_market">Es ist kein App-Store verfügbar</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Beenden</string>
+    <string name="recents_app_killed">App beendet</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">Frei: %1$s | Gesamt: %2$s</string>
+    <string name="recents_meminfo_title">RAM-Info</string>
 </resources>
