--- a/res/values-es-rES/cr_strings.xml
+++ b/res/values-es-rES/cr_strings.xml
@@ -237,4 +237,10 @@ Mantén presionado para establecer</string>
     <string name="icon_pack_default_label">Predeterminado</string>
     <string name="icon_pack_add">Instalar más</string>
     <string name="icon_pack_no_market">No hay una tienda de aplicaciones disponible</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Terminar proceso</string>
+    <string name="recents_app_killed">Aplicación finalizada</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s Disponibles | %2$s Total</string>
+    <string name="recents_meminfo_title">Información de memoria</string>
 </resources>
