--- a/res/values-iw-rIL/cr_strings.xml
+++ b/res/values-iw-rIL/cr_strings.xml
@@ -236,4 +236,10 @@
     <string name="icon_pack_default_label">ברירת המחדל</string>
     <string name="icon_pack_add">התקנת עוד</string>
     <string name="icon_pack_no_market">אין חנות אפליקציות זמינה</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">כפיית הפסקת היישום</string>
+    <string name="recents_app_killed">היישום נסגר</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s זמין /%2$s בסך הכל</string>
+    <string name="recents_meminfo_title">מידע אודות הזכרון</string>
 </resources>
