--- a/res/values-pl-rPL/cr_strings.xml
+++ b/res/values-pl-rPL/cr_strings.xml
@@ -236,4 +236,10 @@
     <string name="icon_pack_default_label">Domyślny</string>
     <string name="icon_pack_add">Zainstaluj więcej</string>
     <string name="icon_pack_no_market">Brak dostępnego sklepu aplikacji</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Zatrzymaj</string>
+    <string name="recents_app_killed">Zatrzymane aplikacje</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s Dostępne | %2$s Łącznie</string>
+    <string name="recents_meminfo_title">Informacje o pamięci</string>
 </resources>
