--- a/res/values-vi-rVN/cr_strings.xml
+++ b/res/values-vi-rVN/cr_strings.xml
@@ -236,4 +236,10 @@
     <string name="icon_pack_default_label">Mặc định</string>
     <string name="icon_pack_add">Cài đặt thêm</string>
     <string name="icon_pack_no_market">Không có ứng dụng nào khả dụng trong cửa hàng</string>
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Đóng</string>
+    <string name="recents_app_killed">Ứng dụng đã tắt</string>
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s Trống | %2$s Tổng cộng</string>
+    <string name="recents_meminfo_title">Thông tin bộ nhớ</string>
 </resources>
