Launcher3: Move memory info to bottom by default
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -210,5 +210,5 @@
     <string name="floating_task_action" translatable="false"></string>
 
     <!-- Whether to place memory info below action buttons. -->
-    <bool name="config_placeMemInfoBelowActions">false</bool>
+    <bool name="config_placeMemInfoBelowActions">true</bool>
 </resources>
