New Crowdin updates (#311)
* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Arabic)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Bulgarian)

* New translations cr_strings.xml (Catalan)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Finnish)

* New translations cr_strings.xml (Hebrew)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Kurdish)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Slovak)

* New translations cr_strings.xml (Turkish)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Chinese Simplified)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Persian)

* New translations cr_strings.xml (Tamil)

* New translations cr_strings.xml (Azerbaijani)

* New translations cr_strings.xml (Hindi)

* New translations cr_strings.xml (Serbian (Latin))

* New translations cr_strings.xml (Santali)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Turkish)


--- a/res/values-ar-rSA/cr_strings.xml
+++ b/res/values-ar-rSA/cr_strings.xml
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s متاحة / %2$s كإجمالي</string>
     <string name="recents_meminfo_title">معلومات الذاكرة</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">شريط بحث البرامج</string>
+    <string name="drawer_search_summary">شريط البحث في أعلى قائمة التطبيقات</string>
 </resources>
