--- a/res/values-pl-rPL/cr_strings.xml
+++ b/res/values-pl-rPL/cr_strings.xml
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s Dostępne | %2$s Łącznie</string>
     <string name="recents_meminfo_title">Informacje o pamięci</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">Pasek wyszukiwania aplikacji</string>
+    <string name="drawer_search_summary">Pasek wyszukiwania na górze szuflady aplikacji</string>
 </resources>
