--- a/res/values-de-rDE/cr_strings.xml
+++ b/res/values-de-rDE/cr_strings.xml
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">Frei: %1$s | Gesamt: %2$s</string>
     <string name="recents_meminfo_title">RAM-Info</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">App-Suchleiste</string>
+    <string name="drawer_search_summary">Suchleiste oben in der App-Übersicht</string>
 </resources>
