--- a/res/values-el-rGR/cr_strings.xml
+++ b/res/values-el-rGR/cr_strings.xml
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s Διαθέσιμο | %2$s Σύνολο</string>
     <string name="recents_meminfo_title">Πληροφορίες μνήμης</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">Γραμμή αναζήτησης εφαρμογών</string>
+    <string name="drawer_search_summary">Γραμμή αναζήτησης πάνω από το συρτάρι εφαρμογών</string>
 </resources>
