--- a/res/values-es-rES/cr_strings.xml
+++ b/res/values-es-rES/cr_strings.xml
@@ -243,4 +243,7 @@ Mantén presionado para establecer</string>
     <!-- Memory info -->
     <string name="meminfo_text">%1$s Disponibles | %2$s Total</string>
     <string name="recents_meminfo_title">Información de memoria</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">Barra de búsqueda</string>
+    <string name="drawer_search_summary">Barra de búsqueda encima del cajón de aplicaciones</string>
 </resources>
