--- a/res/values-iw-rIL/cr_strings.xml
+++ b/res/values-iw-rIL/cr_strings.xml
@@ -192,36 +192,36 @@
         <item>זוהי חוויית הפיקסל הטובה ביותר, לא?</item>
         <item>איך הכול הולך?</item>
         <item>בלי אשליות, ברוכים הבאים למציאות!</item>
-        <item>Thank you for your support</item>
+        <item>תודה על תמיכתך</item>
         <item>No festival for Derps - only perfection!</item>
         <item>One of the buildbot\'s best picks</item>
-        <item>Sanity for your Paranoia</item>
+        <item>שפיות בשביל הפרנויה שלך</item>
         <item>Try Ice Cold desserts</item>
-        <item>What a lovely experience, isn\'t it?</item>
-        <item>Evolution is a myth, right?</item>
+        <item>איזו חוויה מקסימה, לא כך?</item>
+        <item>האבולוציה היא מיתוס, נכון?</item>
         <item>You are what you flash, don\'t be Potato</item>
-        <item>What\'s on your mind?</item>
+        <item>על מה אתה חושב?</item>
         <item>Expecto Patronum</item>
         <item>Wubba Lubba Dub Dub</item>
         <item>Winner Winner ....?</item>
         <item>rm -rf \/</item>
     </string-array>
     <!-- Suggestions -->
-    <string name="suggestion_pref_screen_title">Suggestions</string>
+    <string name="suggestion_pref_screen_title">הצעות</string>
     <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
     <!-- QuickSpace: QuickEvent: Weather -->
-    <string name="quick_event_ambient_weather_title">Weather condition</string>
+    <string name="quick_event_ambient_weather_title">מצב מזג־אוויר</string>
     <string name="quick_event_ambient_weather_summary">Display current weather condition and temperature</string>
     <string name="quick_event_ambient_weather_enabled_info">Requires weather service to be enabled</string>
     <!-- Background opacity -->
     <string name="background_opacity_title">Background opacity</string>
     <!-- Taskbar -->
-    <string name="pref_allow_phone_taskbar_title">Use taskbar</string>
+    <string name="pref_allow_phone_taskbar_title">שימוש בסרגל המשימות</string>
     <string name="pref_allow_phone_taskbar_summary">For opening and switching apps anywhere</string>
     <!-- Recents icons -->
     <string name="recents_screenshot_title">Screenshot</string>
-    <string name="recents_clear_all_title">Clear all</string>
-    <string name="recents_lens_title">Lens</string>
+    <string name="recents_clear_all_title">נקה הכל</string>
+    <string name="recents_lens_title">עדשה</string>
     <!-- All apps themed icons -->
     <string name="pref_themed_icons_title">Themed icons</string>
     <string name="pref_themed_icons_summary">Follow themed icons used on home screen</string>
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s זמין /%2$s בסך הכל</string>
     <string name="recents_meminfo_title">מידע אודות הזכרון</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">סרגל חיפוש יישומים</string>
+    <string name="drawer_search_summary">הצגת סרגל חיפוש בראש מגירת היישומים</string>
 </resources>
