--- a/res/values-pt-rPT/cr_strings.xml
+++ b/res/values-pt-rPT/cr_strings.xml
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s Disponível | %2$s Total</string>
     <string name="recents_meminfo_title">Informações da memória</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">Barra de pesquisa de apps</string>
+    <string name="drawer_search_summary">Barra de pesquisa no topo da gaveta de apps</string>
 </resources>
