--- a/res/values-ru-rRU/cr_strings.xml
+++ b/res/values-ru-rRU/cr_strings.xml
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">Доступно: %1$s | Всего: %2$s</string>
     <string name="recents_meminfo_title">Информация о памяти</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">Строка поиска</string>
+    <string name="drawer_search_summary">Строка поиска в верхней части меню приложений</string>
 </resources>
