--- a/res/values-tr-rTR/cr_strings.xml
+++ b/res/values-tr-rTR/cr_strings.xml
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s Mevcut | %2$s Toplam</string>
     <string name="recents_meminfo_title">Bellek bilgisi</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">Uygulama arama çubuğu</string>
+    <string name="drawer_search_summary">Uygulama sayfasının üstündeki arama çubuğu</string>
 </resources>
