--- a/res/values-vi-rVN/cr_strings.xml
+++ b/res/values-vi-rVN/cr_strings.xml
@@ -242,4 +242,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">Còn trống: %1$s | Tổng số: %2$s</string>
     <string name="recents_meminfo_title">Hiện bộ nhớ truy cập ứng dụng</string>
+    <!-- App drawer searchbar -->
+    <string name="drawer_search_title">Thanh tìm kiếm ứng dụng</string>
+    <string name="drawer_search_summary">Thanh tìm kiếm trên đầu ngăn ứng dụng</string>
 </resources>
