--- a/res/values-zh-rCN/cr_strings.xml
+++ b/res/values-zh-rCN/cr_strings.xml
@@ -19,15 +19,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="settings_title">设置</string>
     <!-- Categories -->
     <string name="home_category_title">主屏幕</string>
-    <string name="home_category_summary">设置 Google now 面板等</string>
+    <string name="home_category_summary">设置 Google 信息流等</string>
     <string name="icons_category_title">图标</string>
     <string name="icons_category_summary">设置图标形状和更多</string>
     <string name="app_drawer_category_title">应用抽屉</string>
     <string name="app_drawer_category_summary">定制您的应用抽屉</string>
     <string name="misc_category_title">杂项</string>
     <string name="misc_category_summary">其他选项</string>
-    <string name="dev_options_title">开发人员选项</string>
-    <string name="dev_options_desc">开启一些隐藏功能，承担自己的风险</string>
+    <string name="dev_options_title">开发者选项</string>
+    <string name="dev_options_desc">启用一些可能造成问题的隐藏功能</string>
     <!-- QuickSpace -->
     <string name="show_quickspace_title">速览</string>
     <string name="show_quickspace_summary">在主屏幕的顶部显示</string>
@@ -54,8 +54,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Icon packs -->
     <string name="icon_pack">图标包</string>
     <!-- DT2S -->
-    <string name="pref_sleep_gesture_title">双击锁屏</string>
-    <string name="pref_sleep_gesture_summary">双击空白处以关机</string>
+    <string name="pref_sleep_gesture_title">双击睡眠</string>
+    <string name="pref_sleep_gesture_summary">双击空白处以关闭屏幕</string>
     <!-- Quickspace PSA - Custom messages for the glance -->
     <string name="quickspace_psa_title">显示一条随机消息</string>
     <string name="quickspace_psa_summary">在快速查看中显示一些亲切的问候</string>
