--- a/quickstep/res/values/styles.xml
+++ b/quickstep/res/values/styles.xml
@@ -138,12 +138,11 @@
         <item name="android:colorControlHighlight">?attr/workspaceTextColor</item>
     </style>
 
-    <style name="OverviewActionButton"
-        parent="@android:style/Widget.DeviceDefault.Button.Borderless">
-        <item name="android:textColor">@color/overview_button</item>
-        <item name="android:drawableTint">@color/overview_button</item>
-        <item name="android:tint">?android:attr/textColorPrimary</item>
-        <item name="android:drawablePadding">8dp</item>
+    <style name="OverviewActionButton" parent="@android:style/Widget.DeviceDefault.Button">
+        <item name="android:background">@drawable/bg_overview_actions_button</item>
+        <item name="android:minWidth">60dp</item>
+        <item name="android:minHeight">32dp</item>
+        <item name="android:stateListAnimator">@null</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
@@ -182,4 +181,6 @@
         <item name="android:textSize">24sp</item>
         <item name="android:lines">2</item>
     </style>
+
+    <color name="mid_clear_all_background_color">@*android:color/system_neutral2_0</color>
 </resources>
