--- a/res/values-vi-rVN/cr_strings.xml
+++ b/res/values-vi-rVN/cr_strings.xml
@@ -53,7 +53,7 @@
     <!-- Settings message explaining when the -1 screen is available on an RTL device. [CHAR LIMIT=100] -->
     <string name="msg_minus_one_on_right">Khi vuốt sang trái từ màn hình chính</string>
     <!-- Trust apps -->
-    <string name="trust_apps_manager_name">Ẩn &amp; khỏi danh sách ứng dụng</string>
+    <string name="trust_apps_manager_name">Ẩn &amp; bảo mật ứng dụng</string>
     <string name="trust_apps_auth_manager">Mở khóa để quản lý các ứng dụng ẩn và được bảo vệ</string>
     <string name="trust_apps_auth_open_app">Xác thực để mở %1$s</string>
     <string name="trust_apps_loading">Đang tải\u2026</string>
@@ -243,6 +243,6 @@
     <string name="meminfo_text">Còn trống: %1$s | Tổng số: %2$s</string>
     <string name="recents_meminfo_title">Hiện bộ nhớ truy cập ứng dụng</string>
     <!-- App drawer searchbar -->
-    <string name="drawer_search_title">Thanh tìm kiếm ứng dụng</string>
-    <string name="drawer_search_summary">Thanh tìm kiếm trên đầu ngăn ứng dụng</string>
+    <string name="drawer_search_title">Hiện thanh tìm kiếm</string>
+    <string name="drawer_search_summary">Hiện thanh tìm kiếm ứng dụng</string>
 </resources>
